--- a/back/new_hire/templates/new_hire_to_do.html
+++ b/back/new_hire/templates/new_hire_to_do.html
@@ -10,6 +10,13 @@
     <div class="card">
       <div class="card-body" style="position: relative;">
         <h2>{{ object.to_do.name }}</h2>
+        {% if object.to_do.video_url %}
+        <div class="mb-4">
+          <div class="ratio ratio-16x9">
+            <iframe src="{{ object.to_do.get_embed_url }}" title="Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          </div>
+        </div>
+        {% endif %}
         {% include '_content.html' with content=object.to_do.content user=request.user %}
         {% if not object.completed %}
         <form method="post" action="{% url 'new_hire:to_do_complete' object.id %}">
